--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upload CV</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
-
+<body style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #121212; margin: 0;">
+    <div>
+        <h1 style="color: #eee; text-align: center; font-family: sans-serif;">CV Evaluation Engine</h1>
+        <form class="file-upload-form" action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
+            <label for="file" class="file-upload-label">
+                <div class="file-upload-design">
+                    <svg viewBox="0 0 640 512" height="1em">
+                        <path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128H144zm79-217c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l39-39V392c0 13.3 10.7 24 24 24s24-10.7 24-24V257.9l39 39c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-80-80c-9.4-9.4-24.6-9.4-33.9 0l-80 80z"></path>
+                    </svg>
+                    <p id="file-info">Drag and Drop</p>
+                    <p>or</p>
+                    <span class="browse-button">Browse file</span>
+                </div>
+                <input id="file" type="file" name="file" accept=".pdf" />
+            </label>
+            <button type="submit" id="submit-button" class="browse-button" style="display: none; margin-top: 20px; width: 100%; border: none; font-size: 16px;">Submit</button>
+        </form>
+    </div>
+    <script>
+        const fileInput = document.getElementById('file');
+        const submitButton = document.getElementById('submit-button');
+        const fileInfo = document.getElementById('file-info');
+        fileInput.addEventListener('change', function() {
+            if (fileInput.files.length > 0) {
+                fileInfo.textContent = `Selected file: ${fileInput.files[0].name}`;
+                submitButton.style.display = 'block';
+            } else {
+                fileInfo.textContent = 'Drag and Drop';
+                submitButton.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
