--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                     <p>or</p>
                     <span class="browse-button">Browse files</span>
                 </div>
-                <input id="file" type="file" name="file" accept=".pdf" multiple />
+                <input id="file" type="file" name="file" accept=".pdf,.doc,.docx" multiple />
             </label>
         </form>
 
